# compbib

./: README.md  pyproject.toml
data/: glasgow_author_overrides.csv
scripts/: build_glasgow_explorer_data.py  enrich_glasgow_citation_graph.py  enrich_glasgow_citations.py  make_glasgow_explorer.py  make_glasgow_imaging_initiative_explorer.py  scrape_glasgow_openalex.py
